<resources>
    <string name="app_name">Github User finder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_user">Search user</string>
    <string name="users_not_found_placeholder">Users not found!</string>
    <string name="not_searched_yet">You haven\'t searched yet! Go to the search bar and search for users.</string>
    <string name="search_results">Search results:</string>
    <string name="user_avatar">User avatar</string>
    <string name="following">following</string>
    <string name="followers">followers</string>
    <string name="joined">Joined</string>
    <string name="user_connections_info">User connections info</string>
    <string name="separation_char">·</string>
    <string name="when_user_joined">When user joined</string>
    <string name="user_working_at">User working at</string>
    <string name="user_location">User location</string>
    <string name="user_email_address">User email address</string>
    <string name="error">Error</string>
    <string name="server_error_message">Something went wrong.\n%s\nPlease try it again.</string>
    <string name="ok_button">OK</string>
    <string name="error_placeholder_image">Error placeholder image</string>
    <string name="you_are_not_connected_to_internet">You are not connected to internet</string>
    <string name="unknown_error_happened_please_try_it_again">Unknown error happened. Please try it again!</string>
    <string name="on_boarding_title">Find any developer on GitHub quickly!</string>
    <string name="onboarding_description">Over 50 million developers from all over the world use GitHub services.</string>
    <string name="onboarding_cta_button_title">Find them right now</string>
    <string name="_50_millions">+50 millions</string>
    <string name="onboarding_background_shape">Simple shape in on-boarding</string>
    <string name="home_title">Welcome</string>
    <string name="user_profile_title">User profile</string>
    <string name="user_search_title">Search user</string>
</resources>