<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.github.husseinhj.githubuser.viewmodels.fragments.UserDetailViewModel" />
    </data>

    <FrameLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.fragments.UserDetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:src="@drawable/ic_person_placeholder"
                android:id="@+id/user_avatar_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/default_margin"
                android:contentDescription="@string/user_avatar" />

            <TextView
                android:id="@+id/user_full_name_view"
                style="@style/AppTitle"
                android:text="@{viewModel.fullName}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@id/user_avatar_view"
                />

            <TextView
                android:id="@+id/username_view"
                style="@style/AppSubtitle"
                android:text="@{viewModel.username}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@id/user_full_name_view"
                />

            <TextView
                android:id="@+id/user_bio_view"
                style="@style/AppContentBody"
                android:text="@{viewModel.userBio}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@id/username_view"
                />

            <LinearLayout
                android:id="@+id/user_connection_view"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@id/user_bio_view"
                >

                <TextView
                    style="@style/AppValueDescription"
                    android:text="@{viewModel.userFollowers}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:drawablePadding="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    app:drawableStartCompat="@drawable/ic_following_people"
                    app:layout_constraintTop_toBottomOf="@id/user_full_name_view"
                    />

                <TextView
                    style="@style/AppContentDescription"
                    android:text="@string/followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    app:layout_constraintTop_toBottomOf="@id/user_full_name_view"
                    />

                <TextView
                    style="@style/AppValueDescription"
                    android:text="@string/separation_char"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    app:layout_constraintTop_toBottomOf="@id/user_full_name_view"
                    />

                <TextView
                    style="@style/AppValueDescription"
                    android:text="@{viewModel.userFollowing}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/user_full_name_view"
                    />

                <TextView
                    style="@style/AppContentDescription"
                    android:text="@string/following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    app:layout_constraintTop_toBottomOf="@id/user_full_name_view"
                    />
            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="@dimen/default_margin"
                app:layout_constraintTop_toBottomOf="@id/user_connection_view"
                >

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:layout_marginBottom="@dimen/half_default_margin"
                    >

                    <TextView
                        android:text="@string/joined"
                        style="@style/AppContentDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:drawableStartCompat="@drawable/ic_calendar"
                        android:drawablePadding="@dimen/default_margin"
                        android:layout_marginEnd="@dimen/default_margin"
                        android:layout_marginStart="@dimen/default_margin"
                        app:layout_constraintTop_toBottomOf="@id/user_full_name_view"
                        />

                    <TextView
                        style="@style/AppValueDescription"
                        android:text="@{viewModel.userJoinedAt}"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/user_full_name_view"
                        />


                </LinearLayout>

                <TextView
                    style="@style/AppValueDescription"
                    android:text="@{viewModel.userCompany}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:drawablePadding="@dimen/default_margin"
                    android:layout_marginStart="@dimen/default_margin"
                    app:drawableStartCompat="@drawable/ic_organization"
                    android:visibility="@{viewModel.companyVisibility}"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:layout_marginBottom="@dimen/half_default_margin"
                    app:layout_constraintTop_toBottomOf="@id/user_full_name_view"
                    />

                <TextView
                    style="@style/AppValueDescription"
                    android:text="@{viewModel.userLocation}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:drawablePadding="@dimen/default_margin"
                    app:drawableStartCompat="@drawable/ic_location"
                    android:layout_marginStart="@dimen/default_margin"
                    android:visibility="@{viewModel.locationVisibility}"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:layout_marginBottom="@dimen/half_default_margin"
                    app:layout_constraintTop_toBottomOf="@id/user_full_name_view"
                    />

                <TextView
                    style="@style/AppValueDescription"
                    android:text="@{viewModel.userEmail}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:drawableStartCompat="@drawable/ic_email"
                    app:layout_constraintStart_toStartOf="parent"
                    android:drawablePadding="@dimen/default_margin"
                    android:visibility="@{viewModel.emailVisibility}"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/half_default_margin"
                    android:layout_marginBottom="@dimen/half_default_margin"
                    app:layout_constraintTop_toBottomOf="@id/user_full_name_view"
                    />

            </LinearLayout>

            <androidx.core.widget.ContentLoadingProgressBar
                android:layout_width="@dimen/bigScreenLoadingSize"
                android:layout_height="@dimen/bigScreenLoadingSize"
                android:layout_marginStart="@dimen/cell_loading_margin"
                android:layout_marginTop="@dimen/cell_loading_margin"
                android:layout_marginEnd="@dimen/cell_loading_margin"
                android:layout_marginBottom="@dimen/cell_loading_margin"
                android:indeterminateTint="?attr/colorPrimary"
                style="?android:attr/progressBarStyleLarge"
                android:visibility="@{viewModel.loadingVisibility}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>